5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1596_1446.log
== TEST (2019-04-02 02:36:39) 
-- CODE:
qts_litros= float(input())
qts_de_michel = 1/3 * qts_litros
a =  round(qts_de_michael,  3)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a =  round(qts_de_michael,  3)
NameError: name 'qts_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:36:43) 
-- CODE:
qts_litros= float(input())
qts_de_michel = 1/3 * qts_litros
a =  round(qts_de_michael,  3)
print(a)


-- EXECUTION TIME:
0.227291
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 3, in <module>
    a =  round(qts_de_michael,  3)
NameError: name 'qts_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:36:56) 
-- CODE:
qts_litros= float(input())
qts_de_michel = 1/3 * qts_litros
a =  round(qts_de_michael,  3)
print(a)


-- EXECUTION TIME:
0.144495
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 3, in <module>
    a =  round(qts_de_michael,  3)
NameError: name 'qts_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:37:20) 
-- CODE:
qtd_litros= float(input())
qtd_de_michel = 1/3 * qtd_litros
a =  round(qtd_de_michael,  3)
print(a)


-- EXECUTION TIME:
0.170292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 3, in <module>
    a =  round(qtd_de_michael,  3)
NameError: name 'qtd_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 02:37:24) 
-- CODE:
qtd_litros= float(input())
qtd_de_michel = 1/3 * qtd_litros
a =  round(qtd_de_michael,  3)
print(a)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a =  round(qtd_de_michael,  3)
NameError: name 'qtd_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 02:37:28) 
-- CODE:
qtd_litros= float(input())
qtd_de_michel = 1/3 * qtd_litros
a =  round(qtd_de_michael,  3)
print(a)


-- EXECUTION TIME:
0.171379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 3, in <module>
    a =  round(qtd_de_michael,  3)
NameError: name 'qtd_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:03) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,      3) 
print (a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:07) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,      3) 
print (a)

-- EXECUTION TIME:
0.20929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:23) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,      3) 
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:26) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,      3) 
print(a)

-- EXECUTION TIME:
0.163503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:20:41) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,    3) 
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:20:44) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael + 1/3 * qtd_litros
a = round(qtd_de_michael,    3) 
print(a)

-- EXECUTION TIME:
0.130078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 2, in <module>
    qtd_de_michael + 1/3 * qtd_litros
NameError: name 'qtd_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:21:00) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,    3) 
print(a)

-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:21:05) 
-- CODE:
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,    3) 
print(a)

-- EXECUTION TIME:
0.270835
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
